add more to the template

--- a/index.Rmd
+++ b/index.Rmd
@@ -17,12 +17,16 @@ options(knitr.kable.NA = '')
 
 # Load packages
 library(tidyverse)
+library(maps)
+library(sf)
+library(kableExtra)
+library(DT)
 
 ```
 
 # Intro
 
-In this project, our group set out to take a more in-depth analysis of draft picks over the last 20 years of three of the four major sports leagues in North America. We aimed to see what what places produced the best picks and then what teams in the leagues are the ones making the best valued picks.
+In this project, our group set out to take a more in-depth analysis of draft picks over the last 20 years of three of the four major sports leagues in North America. We aimed to see what what places produced the best picks and then what teams in the leagues are the ones making the best valued picks. We pulled our dataset for the [NHL](https://www.kaggle.com/datasets/mattop/nhl-draft-hockey-player-data-1963-2022), [NBA](https://www.kaggle.com/datasets/benwieland/nba-draft-data), and the [NFL](https://www.kaggle.com/datasets/jacklichtenstein/espn-nfl-draft-prospect-data?select=nfl_draft_prospects.csv) from Kaggle. 
 
 ## Website publication work flow
 
@@ -32,12 +36,11 @@ In this project, our group set out to take a more in-depth analysis of draft pic
 
 3. Commit and push changes when you are ready. The website may take a couple minutes to update automatically after the push, but you may need to clear your browser's cache or view the page in a private/incognito window to see the changes more quickly. 
 
-
 # Content
 
 You can include text, `code`, and output as usual. Remember to take full advantage of Markdown and follow our [Style Guide](https://acstat231-f22.github.io/home/style-guide.html#Text_narration).
 
-```{r ggplot-example, fig.align="left", out.width="100%"}
+```{r include=FALSE}
 ggplot(data = cars, aes(x = speed, y = dist)) + 
   geom_point() + 
   labs(x = "Speed of car (mph)",
@@ -45,6 +48,7 @@ ggplot(data = cars, aes(x = speed, y = dist)) +
        title = "Stopping distance increases with faster speeds",
        subtitle = "Based on 1920s study") +
   theme_classic()
+#ggplot-example, fig.align="left", out.width="100%"
 ```
 
 Examples and additional guidance are provided below. 
@@ -52,14 +56,154 @@ Examples and additional guidance are provided below.
 Take note of the the default code chunk options in the `setup` code chunk. For example, unlike the rest of the Rmd files we worked in this semester, the default code chunk option is `echo = FALSE`, so you will need to set `echo  = TRUE` for any code chunks you would like to display in the blog. You should be thoughtful and intentional about the code you choose to display. 
 
 
-## Links 
+# NHL 
+
+```{r include=FALSE}
+#initial importing of the file
+#import the nhl draft dataset
+nhl <- read_csv("dataforNHL/nhldraft.csv")
+
+#import the map
+world_map <- maps::map("world", plot = FALSE, fill = TRUE) %>%
+  st_as_sf()
+
+#mutate to change nationalities to coutries on maps
+#this may seem a bit tedious but this was the most efficient way I found because some of the abbreviation didn't match up to the package
+nhlcountrynames <- nhl %>%
+  mutate_if(is.numeric, ~replace_na(.,0))%>%
+  mutate(nationality = ifelse(nationality == "CA", paste("Canada"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "US", paste("USA"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "FI", paste("Finland"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "SE", paste("Sweden"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "RU", paste("Russia"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "CZ", paste("Czech Republic"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "FR", paste("France"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "CH", paste("Switzerland"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "DE", paste("Germany"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "SK", paste("Slovakia"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "AT", paste("Austrian"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "AU", paste("Australia"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "DK", paste("Denmark"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "LV", paste("Latvia"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "UA", paste("Ukraine"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "ZA", paste("South Africa"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "EE", paste("Estonia"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "SI", paste("Slovenia"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "NL", paste("Netherlands"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "BY", paste("Belarus"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "GB", paste("UK"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "IT", paste("Italy"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "KZ", paste("Kazakhstan"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "NO", paste("Norway"), nationality ))%>%
+  mutate(nationality = ifelse(nationality == "PL", paste("Poland"), nationality ))
+
+#add points per game to the skaters
+nhlcountrynames1 <- nhlcountrynames %>%
+  mutate(ppg = points/games_played)
+
+#take draft data so players are a minimum 5 years removed from being drafted and in the 21century
+nhlpost2000to2017years <- nhlcountrynames1 %>%
+  filter(year < 2018)%>%
+  filter(year > 1999)
+
+#wrangle to filter people who have played more than 80 games
+nhlrelevant <- nhlpost2000to2017years %>%
+  filter(games_played > 79)
+
+#mutate to create a variable that divides games played by point shares
+nhlmosteffective <- nhlrelevant %>%
+  mutate(winshares = point_shares/games_played)%>%
+  arrange(desc(winshares))
+
+
+#make variable that multiplies pick in draft to winshares
+nhlmosteffectivetotal1 <- nhlmosteffective %>%
+  mutate(valueofpick = winshares * overall_pick)%>%
+  arrange(desc(valueofpick))
+```
+
+```{r echo=FALSE, message=FALSE}
+#This data is only representative of skaters
+#make variable that multiplies pick in draft to winshares
+nhlmosteffectiveskater1 <- nhlmosteffectivetotal1 %>%
+  mutate(valueofskater = winshares * overall_pick * ppg)%>%
+  arrange(desc(valueofskater))
+
+# combine the map to the countries for sskaters
+worldtotalmap <- nhlmosteffectiveskater1 %>%
+  left_join(world_map, by = c("nationality" = "ID"), multiple = "all")%>%
+  mutate_if(is.numeric, ~replace_na(.,0))
+
+
+#summarize into countries
+playerworldranking <- worldtotalmap %>%
+  filter(position != "G")%>%
+  group_by(nationality, geom) %>%
+  summarise(avgpickvalue = mean(valueofskater, na.rm = TRUE))%>%
+  arrange(desc(avgpickvalue))
+  
+
+#make graph to represent graph of best valued picks for skaters
+ggplot(playerworldranking, aes(geometry = geom, fill = avgpickvalue)) +
+  geom_sf() +
+  theme_void() +
+  labs(fill = "Value Of Pick Ranking"
+       , title = "Best Valued Skater Picks Based on Home Country")
+```
+```{r echo=FALSE, message=FALSE}
+# make a plot for where the best valued goalies stem from
+goaliedata <- nhlmosteffectivetotal1 %>%
+  filter(position == "G")%>%
+  select(year, overall_pick, team, player, nationality, games_played, 
+         goalie_wins, goalie_losses, point_shares, save_percentage, 
+         goals_against_average, valueofpick)%>%
+  mutate(winpct = goalie_wins/games_played)
+
+goalieworldmap <- goaliedata %>%
+  left_join(world_map, by = c("nationality" = "ID"), multiple = "all")%>%
+  mutate_if(is.numeric, ~replace_na(.,0))
+
+
+goalieworldranking <- goalieworldmap %>%
+  group_by(nationality, geom) %>%
+  summarise(avgpickvalue = mean(valueofpick, na.rm = TRUE))%>%
+  arrange(desc(avgpickvalue))
+
+ggplot(goalieworldranking, aes(geometry = geom, fill = avgpickvalue)) +
+  geom_sf() +
+  theme_void() +
+  labs(fill = "Value Of Pick Ranking"
+       , title = "Best Valued Goaltender Picks Based on Home Country")
+```
+```{r echo=FALSE}
+#add points per game to the skaters
+nhlppg <- nhl %>%
+  mutate(ppg = points/games_played)%>%
+  mutate_if(is.numeric, ~replace_na(.,0))
+
+#take draft data so players are a minimum 5 years removed from being drafted and in the 21century
+nhlpost2000to2017years1 <- nhlppg %>%
+  filter(year < 2018)%>%
+  filter(year > 1999)
+
+nhleffectiveness <- nhlpost2000to2017years1 %>%
+  mutate(winshares = point_shares/games_played)%>%
+  arrange(desc(winshares))
+
+#group by the team and point shares
+nhlteamranking <- nhleffectiveness %>%
+  group_by(team) %>%
+  summarise(avgpickvalue = mean(winshares, na.rm = TRUE))%>%
+  arrange(desc(avgpickvalue))
+```
+## Analysis
 
 You can include [links](https://www.datadreaming.org/post/r-markdown-theme-gallery/) using Markdown syntax as shown. 
 
 You should include links to relevant sites as you write. You should additionally include a list of references as the end of your blog with full citations (and relevant links).
 
 
-## Visualizations 
+# NFL 
 
 Visualizations, particularly interactive ones, will be well-received. That said, do not overuse visualizations. You may be better off with one complicated but well-crafted visualization as opposed to many quick-and-dirty plots. Any plots should be well-thought-out, properly labeled, informative, and visually appealing.
 
@@ -76,13 +220,14 @@ You may embed a published Shiny app in your blog if useful, but be aware that th
 
 Any Shiny apps embedded in your blog should be accompanied by the link to the published Shiny app (I did this using a figure caption in the code chunk below, but you don't have to incorporate the link in this way).
 
-```{r ds-salaries-app, out.width = "100%", out.extra = 'data-external="1" frameborder="no"', fig.cap = "[Data Science Salaries Shiny App](https://bebailey.shinyapps.io/data-science-salaries)"}
-knitr::include_app("https://bebailey.shinyapps.io/data-science-salaries",
-                   height = "500px")
-```
+#{r ds-salaries-app, out.width = "100%", out.extra = 'data-external="1" frameborder="no"', fig.cap = "[Data Science Salaries Shiny #App](https://bebailey.shinyapps.io/data-science-salaries)"}
+#knitr::include_app("https://bebailey.shinyapps.io/data-science-salaries",
+#                   height = "500px")
+#```
 
+#
 
-## Tables
+# NBA
 
 ### **DT** package
 
