--- a/index.Rmd
+++ b/index.Rmd
@@ -22,7 +22,8 @@ library(sf)
 library(kableExtra)
 library(DT)
 library(viridis)
-
+library(ggplot2)
+library(car)
 ```
 
 # Intro
@@ -200,21 +201,8 @@ nhlteamranking <- nhleffectiveness %>%
   arrange(desc(avgpickvalue))
 ```
 
-## Analysis
-
-You can include [links](https://www.datadreaming.org/post/r-markdown-theme-gallery/) using Markdown syntax as shown. 
-
-You should include links to relevant sites as you write. You should additionally include a list of references as the end of your blog with full citations (and relevant links).
-
-
 # NFL 
 ```{r include=FALSE}
-library(maps)
-library(tidyverse)
-library(sf)
-library(ggplot2)
-library(car)
-
 #import the NFL draft dataset
 nfl <- read_csv("dataforNFL/nfl_draft_picks.csv")
 
@@ -327,7 +315,11 @@ state_info <- data.frame(state_full = tolower(state.name)
 nfl_final <- nfl_with_states %>%
   left_join(state_info, by = "state_cd") %>%
   right_join(states_map, by = c("state_full"="ID"))
+```
 
+
+
+```{r echo=FALSE, message=FALSE}
 #create plot on US country map
 ggplot(nfl_final, aes(geometry=geom, fill = Overall)) +
   geom_sf(color = "lightgrey") +
@@ -350,8 +342,12 @@ nfl_final %>%
             options = list(pageLength = 10, autoWidth = TRUE))
 ```
 
-  The NFL draft process occurs when NFL teams pick players, often attending and playing in colleges and universities across the country. The pattern that most typically occurs is the best college football players in the country are often picked in the first couple of rounds. For example, the first player picked in the first round of the draft is likely very talented and highly sought-after. A player’s performance at their college or university is an important consideration for how likely, or quickly they will be picked by an NFL. Something to consider when looking at players drafted in the NFL and their corresponding college is whether are there certain college football teams that produce some of the first picks in the NFL draft. Throughout this analysis we can determine which U.S. states produce some of the top overall NFL draft picks over fifteen years. This information can help us identify states with the top college football players, as well as determine if there are any correlations between the state a player went to school in and the NFL team they were drafted to. 
-  Draft data is used throughout fifteen years (2006 to 2021). Before analyzing this topic, I had hypothesized that states such as Alabama, Texas, and Louisiana would have some of the highest overall draft picks. I thought this based on the stigma around large football schools in these states, and how seemingly successful they have been over the past few years. However, after using spatial visualizations to further analyze this data I found that states such as New York, Oregon, Wyoming, and Utah have had college football players drafted in the first round and had overall picks of ten or higher. On the map provided above, these states are colored in red or orange, indicating a player picked high in the first round. Something to consider when looking at this data is that the map only shows data for the first round of the NFL draft when in reality there are seven rounds total. If we were to alter the data and look at different rounds, we might see different results. Populations that could find these results interesting are high school recruits whose goal is to make it to the NFL. They could look at the map, or use the search function in the table to see which college or university has consistently sent players to the NFL. To personalize these results further, high school football recruits could search their position and determine what school, and NFL team previous players have gone to.
+## Analysis
+
+You can include [links](https://www.datadreaming.org/post/r-markdown-theme-gallery/) using Markdown syntax as shown. 
+
+You should include links to relevant sites as you write. You should additionally include a list of references as the end of your blog with full citations (and relevant links).
+
 
 Visualizations, particularly interactive ones, will be well-received. That said, do not overuse visualizations. You may be better off with one complicated but well-crafted visualization as opposed to many quick-and-dirty plots. Any plots should be well-thought-out, properly labeled, informative, and visually appealing.
 
